package pt.ipp.isep.dei.esoft.project.domain;

public interface Message {
    void sendMessage(String text);
}